   local secret for mutual authentication.
 * Added a new 'faxdetect=yes|no' configuration option to sip.conf.  When this
   option is enabled, a SIP channel will go to the fax extension (if it exists)
   after T38 is negotiated.  This option is disabled by default.
 * If ATTENDED_TRANSFER_COMPLETE_SOUND is set, the sound will be played to the
   target of an attended transfer

Skinny Changes
--------------
 * The configuration file now holds seperate sections for devices and lines.
   Please have a look at configs/skinny.conf.sample and change your skinny.conf
   accordingly.

DAHDI Changes
-------------
 * The UK option waitfordialtone has been added for use with BT analog
   lines.

Dialplan Functions
------------------
 * Added a new dialplan function, CURLOPT, which permits setting various
   options that may be useful with the CURL dialplan function, such as
   cookies, proxies, connection timeouts, passwords, etc.
 * Permit the syntax and synopsis fields of the corresponding dialplan
   functions to be individually set from func_odbc.conf.
 * Added debugging CLI functions to func_odbc, 'odbc read' and 'odbc write'.
 * func_odbc now may specify an insert query to execute, when the write query
   affects 0 rows (usually indicating that no such row exists).
 * Added a new dialplan function, LISTFILTER, which permits removing elements
   from a set list, by name.  Uses the same general syntax as the existing CUT
   and FIELDQTY dialplan functions, which also manage lists.
 * Added REALTIME_FIELD and REALTIME_HASH, which should aid users in better
   obtaining realtime data from the dialplan.
 * Added LOCAL_PEEK, which I have no idea how to use, but Leif Madsen wanted it.
   Russell says it's, like, a scope resolution function for LOCAL variables.
   Totally.  Hopefully, that means more to you than it does to me.

Applications
------------
 * Scheduled meetme conferences may now have their end times extended by
   using MeetMeAdmin.